--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,49 +1,76 @@
 .footer {
-    background-color: hwb(0 31% 68%);
+    background-color: hwb(0 17% 82%);
     color: #fff;
     padding: 20px;
     
   }
+  .pred{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
   .social-media {
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
-    
-  }
-  
+    justify-content: center;
+    gap:40px;
+  } 
+
   .social-media a {
-    color: #fff;
     font-size: 44px;
     margin: 0 10px;
     text-decoration: none;
+    color: inherit;
   }
+  .contact-link {
+    text-decoration: none;
+  }
+  
+  .contact-text {
+    color: white;
+  }
+  
+  
   .footer-contacts{
-    margin-top: 3rem;
+    margin-top: 2rem;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     justify-content: center;
     gap:4rem;
-    /* margin-left: 5rem; */
-
   }
   .map{
-    width: 450px;
-    height: 450px;
+    width: 100%;
+    height: 250px;
     overflow: hidden;
     border: 5px solid rgb(14, 12, 12);
-    /* border-radius: 5%; */
   }
-  .div_map{
+  .q-links{
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
   }
 
+ .links{
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  margin-top: 10px;
+ }
 
-  .end-content{
+
+.links a {
+  display: block; 
+  text-decoration: none; 
+  color: inherit;
+}
+
+.links a:hover {
+  color: rgb(111, 16, 35); 
+}
+
+.end-content{
     font-family: Georgia, serif;
-  }
+    
+}
   @media screen and (max-width: 450px) {
     .map{
       width: 100%;
