--- a/src/pages/events/styles.css
+++ b/src/pages/events/styles.css
@@ -45,6 +45,9 @@ video {
   font-size: 16px;
   line-height: 1.6;
 }
+.card:hover {
+  transform: scale(1.03);
+}
 
 @media screen and (max-width: 576px) {
   .video-container h2 {
