--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -80,17 +80,17 @@ body {
   font-family: "Cairo", Helvetica, Arial, Lucida, sans-serif;
   line-height: 30px;
   width: 70%;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 .about-content h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 .about-image img {
   width: 100%;
-  height: 100%;
-  border-radius: 5%;
-  margin-top: 3rem;
+  height: 280px;
+
+  margin-top: 1rem;
 }
 /* About campus */
 .about-campus-container {
@@ -126,30 +126,31 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 3rem;
+  margin: 1rem;
 }
 .president-img,
 .hod-img {
   width: 100%;
   height: 400px;
-  border-radius: 5%;
+  border-radius: 20px;
 }
 .president-msg,
 .hod-msg {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 .president-msg p,
 .hod-msg p {
   font-family: "Cairo", Helvetica, Arial, Lucida, sans-serif;
   line-height: 30px;
-  width: 80%;
-  font-size: 1.3rem;
+
+  font-size: 1rem;
 }
 .president-msg h1,
 .hod-msg h1 {
-  font-size: 3rem;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 1314px) {
