--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -3,11 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  height: 100vh;
 
 }
 .header-image {
-  width: 30rem;
-  height: 30rem;
+  width: 25rem;
+  height: 25rem;
 }
 body {
   overflow-x: hidden;
@@ -15,7 +16,7 @@ body {
 
 .wheel {
   position: absolute;
-  top: 100px;
+  top: 200px;
   left: 200px;
   z-index: -1;
   opacity: 0.3;
@@ -71,6 +72,7 @@ body {
   flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
+  width: 100%;
   /* margin-top:5rem ; */
   /* margin-bottom: 5rem; */
   /* margin-right: 2rem; */
