--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -94,12 +94,7 @@ body {
   font-size: 2.5rem;
   font-weight: 400;
 }
-.about-image img {
-  width: 100%;
-  height: 280px;
-  
-  margin-top: 1rem;
-}
+
 /* President message */
 .president-msg-container,
 .hod-msg-container {
@@ -203,7 +198,7 @@ body {
     font-size: small;
   }
   .about-container {
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
   }
   .about-content h1 {
     font-size: 3rem;
@@ -281,22 +276,14 @@ body {
     left: 80px;
   }
 
-  .about-image img {
-    height: 300px;
-    width: 350px;
-  }
+ 
   .president-img,
   .hod-img {
     width: 100%;
     height: 300px;
     border-radius: 5%;
   }
-  .about-image img {
-    margin-left: 2.5rem;
-    width: 80%;
-    height: 300px;
-    border-radius: 5%;
-  }
+  
   .president-msg h1,
   .hod-msg h1 {
     font-size: 2rem;
